k8s/deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: samuel
  labels:
    name: app-ingress
spec:
  rules:
  - host: samuelprak.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: portfolio-service 
            port:
              number: 80
  - host: portfolio.samuelprak.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: portfolio-service 
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: samuel
spec:
  selector:
    app: portfolio
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: samuel
spec:
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: portfolio
        image: ghcr.io/herasus/portfolio:latest
        ports:
        - containerPort: 80
